--- a/AnjanyEDA.ipynb
+++ b/AnjanyEDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1FtV0KDc7nmk0otKelrpn300FRBTNXP2L",
-      "authorship_tag": "ABX9TyMYxTGDpdNN6DwzMMloZ/Uq",
+      "authorship_tag": "ABX9TyOqfM+K2ytZ7BSWSZuW1Bh7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,7 @@
       "cell_type": "markdown",
       "source": [
         "# DATA SCIENCE EDA PROJECT!\n",
+        "###### Created By: Anjany Kumar Jaiswal(RA2311026010006)\n",
         "## DATA SOURCE\n",
         "Student Details Regarding Their Marks\n"
       ],
