--- a/AnjanyEDA.ipynb
+++ b/AnjanyEDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1FtV0KDc7nmk0otKelrpn300FRBTNXP2L",
-      "authorship_tag": "ABX9TyNAidT3lud60xZn1213lHm3",
+      "authorship_tag": "ABX9TyO+mgK3mcJibE6gpjlXVMRs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "MCbw1LHfldU5"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "beFctmdWqwCW"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +103,7 @@
         },
         "outputId": "ce3ad903-bd6f-4f2e-c60b-5011309c852a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -568,7 +568,7 @@
         },
         "outputId": "bf72d0db-ad87-4fa6-890a-385a7b2f59cb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -923,7 +923,7 @@
         },
         "outputId": "79e4c94b-e794-48e7-e5ca-7aec1ce2fe92"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1266,7 +1266,7 @@
         },
         "outputId": "50e3262a-03b0-4055-a455-69966ce5c6f6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1633,7 +1633,7 @@
         },
         "outputId": "452c159f-5c28-4f8d-b94f-1f9dc47d2cc9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1986,7 +1986,7 @@
         "id": "7FiHV5IsOAZc",
         "outputId": "0f807d04-95ae-4692-dfb8-f7dbb9c03bd7"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2020,7 +2020,7 @@
         "id": "YTLoXyA-OAXI",
         "outputId": "384a7b2d-c36a-4b15-a4f6-6eed401f29cd"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2054,7 +2054,7 @@
         "id": "1XWV6EEyOAUE",
         "outputId": "b3c50745-02a0-4d6d-f6c2-2a7de35cfe55"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2094,7 +2094,7 @@
         "id": "zmpQhEbTOAIu",
         "outputId": "6d4ca716-12d9-4967-8345-aa9f5fb282c1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2133,7 +2133,7 @@
         "id": "Weaph_c5XtdL",
         "outputId": "8c3d3412-b8cd-4e03-aa6c-7958fbebc4e6"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2173,7 +2173,7 @@
         },
         "outputId": "ca1885d8-2cc7-443d-fb0c-ad6db7a45dc8"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2252,7 +2252,7 @@
         },
         "outputId": "fc8af3e1-94df-414f-e34d-9135ec5a2fd3"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2270,7 +2270,7 @@
       "cell_type": "markdown",
       "source": [
         "# Thank You For reviewing my EDA project!!\n",
-        "### I did lean from Yotube but took a little help from AI because this topic was really new to me so i got few errors so thats why!! Thank you giving such task i really learnt something new because of this project."
+        "### I did lean from Yotube but took a little help from AI because this topic was really new to me so i got few errors so thats why!! Thank you giving such task i really learnt something new because of this project. I would be glad that if i joined this club and ambitous to do all the given task and learn new things from this club"
       ],
       "metadata": {
         "id": "vbU_hIGFXtFH"
