--- a/AnjanyEDA.ipynb
+++ b/AnjanyEDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1FtV0KDc7nmk0otKelrpn300FRBTNXP2L",
-      "authorship_tag": "ABX9TyO+mgK3mcJibE6gpjlXVMRs",
+      "authorship_tag": "ABX9TyOmnsiZGFIyg3P2vfmnwk20",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2270,7 +2270,7 @@
       "cell_type": "markdown",
       "source": [
         "# Thank You For reviewing my EDA project!!\n",
-        "### I did lean from Yotube but took a little help from AI because this topic was really new to me so i got few errors so thats why!! Thank you giving such task i really learnt something new because of this project. I would be glad that if i joined this club and ambitous to do all the given task and learn new things from this club"
+        "### I did lean from Yotube but took a little help from few seniors and asked a few friends who had a idea about the EDA because this topic was really new to me so i got few errors so thats why!! Thank you giving such task i really learnt something new because of this project. I would be glad that if i joined this club and ambitous to do all the given task and learn new things from this club"
       ],
       "metadata": {
         "id": "vbU_hIGFXtFH"
